Thu Jun 13 1996  Ian Lance Taylor  <ian@cygnus.com>

	* tag.c (tag_check_valid): Correct sizeof CVSROOTADM_HISTORY to
	use CVSROOTADM_VALTAGS.

Thu Jun 13 1996  Ian Lance Taylor  <ian@cygnus.com>

	* lock.c (Writer_Lock): If we called lock_wait to wait for a lock,
	then call lock_obtained when we get it.
	(set_lock): Likewise.
	(lock_obtained): New static function.

Thu Jun 13 13:55:38 1996  Ian Lance Taylor  <ian@cygnus.com>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (main): If we can't read cvs root, don't say "you don't
	have sufficient access"; just print the message from errno.  It
	might be "No such file or directory" or something else for which
	"you don't have sufficient access" doesn't make any sense.

Thu Jun 13 1996  Ian Lance Taylor  <ian@cygnus.com>

	* commit.c (remove_file): Pass noerr as 0 to RCS_checkout.

Thu Jun 13 12:55:56 1996  Ian Lance Taylor  <ian@cygnus.com>

	* patch.c: Initialize rev1_validated and rev2_validated to 0, not 1.

Thu Jun 13 12:55:56 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rtag.c (locked_dir): Revise comments regarding locking; the rtag
	and tag situations are different (changing from readlocking one
	directory at a time to writelocking one directory at a time does
	not do everything we might want, but it does fix simultaneous tags
	and it doesn't make anything worse).

Thu Jun 13 1996  Ian Lance Taylor  <ian@cygnus.com>

	Prevent simultaneous tag operations from interfering with each
	other.
	* rtag.c (rtag_proc): Pass rtag_filesdoneproc to start_recursion,
	and pass readlock as 0.
	(locked_dir, locked_list): New static variables.
	(rtag_fileproc): Write lock the repository if it is not already
	locked.
	(rtag_filesdoneproc): New static function to unlock the
	repository.
	* tag.c (tag): Pass tag_filesdoneproc to start_recursion, and pass
	readlock as 0.
	(locked_dir, locked_list): New static variables.
	(tag_fileproc): Write lock the repository if it is not already
	locked.