@@ -1,9 +1,13 @@
 Thu Jun 13 1996  Ian Lance Taylor  <ian@cygnus.com>
 
+	* tag.c (tag_check_valid_join): New function.
+	* cvs.h (tag_check_valid_join): Declare.
+	* checkout.c (join_tags_validated): New static variable.
+	(checkout_proc): Check validity of join tags.
+	* update.c (update): Likewise.
+
 	* tag.c (tag_check_valid): Correct sizeof CVSROOTADM_HISTORY to
 	use CVSROOTADM_VALTAGS.
-
-Thu Jun 13 1996  Ian Lance Taylor  <ian@cygnus.com>
 
 	* lock.c (Writer_Lock): If we called lock_wait to wait for a lock,
 	then call lock_obtained when we get it.
